[project]
name = "dmd"
version = "0.0.1"
description = ""
authors = [
    {name = "mukappalambda",email = "maokailan24@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy (>=1.25)",
    "pandas (>=2.0)",
    "matplotlib (>=3.8.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
